# ethhook

./: .dockerignore  .env.digitalocean.example  .env.example  .env.production.example  .gitignore  ACTIVATION_GUIDE.md  ADMIN_ACCESS_IMPLEMENTATION.md  ADMIN_API_TESTING_COMPLETE.md  ADMIN_LOGIN_FIXED.md  ARCHITECTURE.md  ARCHITECTURE_OPTIMIZATION_ANALYSIS.md  AUTOMATED_DEPLOYMENT.md  BENCHMARK_RESULTS.md  CLICKHOUSE_MIGRATION_PLAN.md  CLICKHOUSE_SERIALIZATION_FIX.md  COMPARISON_REVISION_SUMMARY.md  CONTRIBUTING.md  Cargo.toml  DATABASE_OPTIMIZATION_PLAN.md  DEMO_GUIDE.md  DEPLOYMENT_QUICKSTART.md  DEPLOYMENT_URL_TEST_PLAN.md  DEPLOY_CHECKLIST.md  DEPLOY_NOW.md  DEPLOY_UI_MODERNIZATION.md  DIGITALOCEAN_DEPLOYMENT.md  DOCKER_BUILD_FIX_SUMMARY.md  DOCKER_REGISTRY_IMPLEMENTATION.md  DO_DEPLOY_SIMPLE.md  E2E_TESTS_FIXED.md  ENTERPRISE_ARCHITECTURE_ANALYSIS.md  FRONTEND_UI_UX_AUDIT_REPORT.md  GITHUB_PAT_SETUP.md  GITHUB_SECRETS_QUICKSTART.md  IMPLEMENTATION_ROADMAP.md  ISSUE_ANALYSIS_FIX25.md  LICENSE  LOAD_TESTING_IMPLEMENTATION.md  LOAD_TEST_QUICKSTART.md  LOAD_TEST_SESSION_SUMMARY.md  (+32 more)
.cargo/: config.toml
.do/: app.yaml
benchmarks/: Cargo.toml  json_bench.c  json_bench.rs  json_bench_c  jwt_bench.c  jwt_bench.rs  jwt_bench_c  memory_bench.c  memory_bench.rs  memory_bench_c  startup_results.md
crates/admin-api/: Cargo.toml  Dockerfile  set_admin_bin.toml
crates/admin-api/src/: api_key.rs  auth.rs  config.rs  health.rs  lib.rs  main.rs  metrics.rs  metrics_middleware.rs  state.rs
crates/admin-api/src/handlers/: applications.rs  applications.rs.bak  applications.rs.bak3  applications.rs.bak4  applications.rs.bak5  endpoints.rs  endpoints.rs.bak  endpoints.rs.bak3  endpoints.rs.bak4  endpoints.rs.bak6  events.rs  events_stub.rs  mod.rs  sse.rs  statistics.rs  statistics_stub.rs  users.rs  users.rs.backup  users.rs.bak  users.rs.bak3  users.rs.bak4  websocket.rs
crates/admin-api/tests/: integration_test.rs
crates/common/: Cargo.toml
crates/common/src/: auth.rs  clickhouse.rs  db.rs  error.rs  lib.rs  logging.rs  redis_client.rs  types.rs
crates/domain/: Cargo.toml
crates/domain/src/: application.rs  delivery.rs  endpoint.rs  event.rs  lib.rs  user.rs
crates/event-ingestor/: Cargo.toml  Dockerfile
crates/event-ingestor/src/: client.rs  config.rs  deduplicator.rs  filter.rs  health.rs  ingestion.rs  lib.rs  main.rs  metrics.rs  publisher.rs  types.rs
crates/event-ingestor/tests/: integration_test.rs
crates/leptos-portal/: Cargo.toml  Dockerfile  README.md  Trunk.toml  UI_IMPROVEMENTS_QUICKSTART.md  event-recommendations.css  index.html  nginx.conf  style-improvements.css  style.css
crates/leptos-portal/src/: auth.rs  lib.rs  utils.rs
crates/leptos-portal/src/api/: mod.rs
crates/leptos-portal/src/components/: event_recommendations.rs  mod.rs  skeleton.rs  toast.rs
crates/leptos-portal/src/pages/: applications.rs  dashboard.rs  endpoints.rs  events.rs  home.rs  login.rs  mod.rs  register.rs  settings.rs
crates/message-processor/: Cargo.toml  Dockerfile
crates/message-processor/src/: config.rs  consumer.rs  health.rs  lib.rs  main.rs  matcher.rs  metrics.rs  publisher.rs
crates/message-processor/tests/: matcher_tests.rs
crates/pipeline/: Cargo.toml  Dockerfile  README.md
crates/pipeline/src/: batch.rs  config_db.rs  health.rs  main.rs  metrics.rs  websocket.rs
crates/webhook-delivery/: Cargo.toml  Dockerfile
crates/webhook-delivery/src/: circuit_breaker.rs  config.rs  consumer.rs  delivery.rs  health.rs  lib.rs  main.rs  metrics.rs  retry.rs
ethhook-c/: .clang-format  .env.example  .gitignore  CMakeLists.txt  COMPLETION_REPORT.md  CONTRIBUTING.md  DEPLOYMENT.md  PRODUCTION_DEPLOYMENT_PLAN.md  PROJECT_SUMMARY.md  README.md  benchmark-plan.md  build.sh  clang-tidy-summary.md  deploy.sh  sanitizer-build-summary.md  setup-macos.sh  static-analysis-summary.md  test_sanitizer.c
ethhook-c/.do/: app.yaml
ethhook-c/build-prod/: CMakeCache.txt  Makefile  cmake_install.cmake
ethhook-c/build-sanitizers/: CMakeCache.txt  Makefile  cmake_install.cmake
ethhook-c/config/: config.example.toml  config.prod.toml
ethhook-c/docker/: Dockerfile.admin-api  Dockerfile.delivery  Dockerfile.ingestor  Dockerfile.processor  clickhouse-init.sql  docker-compose.prod.yml  docker-compose.yml  entrypoint.sh
ethhook-c/docs/: ARCHITECTURE.md  LOCAL_DEVELOPMENT.md  MODERNIZATION_PLAN.md  MODERNIZATION_SUMMARY.md  PERFORMANCE_OPTIMIZATION.md  README.md
ethhook-c/ethhook-c/: LICENSE  QUICKSTART.md  README.md  docker-compose.yml
ethhook-c/ethhook-c/.github/workflows/: ci.yml
ethhook-c/ethhook-c/docker/: Dockerfile.admin-api  Dockerfile.ingestor
ethhook-c/ethhook-c/docs/: DEPLOYMENT.md
ethhook-c/ethhook-c/include/ethhook/: arena.h  log.h  types.h
ethhook-c/ethhook-c/src/admin-api/: CMakeLists.txt
ethhook-c/ethhook-c/src/common/: CMakeLists.txt  config.c  json.c  log.c  utils.c
ethhook-c/ethhook-c/src/event-ingestor/: CMakeLists.txt
ethhook-c/ethhook-c/src/message-processor/: CMakeLists.txt
ethhook-c/examples/load-tester/: CMakeLists.txt  main.c
ethhook-c/examples/webhook-receiver/: CMakeLists.txt  main.c
ethhook-c/include/ethhook/: admin_api.h  clickhouse.h  common.h  delivery.h  ingestor.h  json.h  processor.h
ethhook-c/scripts/: build.sh  install-deps.sh  seed_database.py
ethhook-c/src/admin-api/: auth.c  bcrypt.c  handlers.c  json_response.c  main.c  routes.c
ethhook-c/src/common/: arena.c  circuit_breaker.c  clickhouse.c  config.c  crypto.c  database.c  error.c  json.c  logging.c  metrics.c
ethhook-c/src/delivery/: http_client.c  main.c  retry.c  worker.c
ethhook-c/src/event-ingestor/: main.c
ethhook-c/src/ingestor/: main.c  redis_publisher.c  websocket.c  worker.c
ethhook-c/src/message-processor/: main.c
ethhook-c/src/processor/: filter.c  main.c  matcher.c  redis_consumer.c
ethhook-c/src/webhook-delivery/: CMakeLists.txt
ethhook-c/tests/: CMakeLists.txt
tests/: Cargo.toml  README.md  e2e_system_test.rs  e2e_tests.rs  integration_tests.rs  mock_eth_rpc.rs
tools/load-tester/: Cargo.toml
tools/load-tester/src/: main.rs
(+319 files in other folders)
