[package]
name = "ethhook-admin-api"
version = "0.1.0"
edition = "2024"

[dependencies]
# Web framework
axum = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Database
sqlx = { workspace = true }

# Authentication & Security
jsonwebtoken = { workspace = true }
bcrypt = { workspace = true }
rand = { workspace = true }

# Utilities
uuid = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
validator = { workspace = true }

# Server-Sent Events (SSE) for real-time updates
futures = "0.3"
tokio-stream = { version = "0.1", features = ["sync"] }
once_cell = "1.20"

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Environment variables
dotenvy = { workspace = true }

# Metrics
prometheus = "0.13"
lazy_static = "1.4"

# Internal dependencies
ethhook-common = { path = "../common" }
ethhook-config = { path = "../config" }
ethhook-domain = { path = "../domain" }

[[bin]]
name = "set-admin"
path = "src/bin/set_admin.rs"

[dev-dependencies]
http-body-util = "0.1"
