[package]
name = "ethhook-common"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# Async runtime
tokio = { workspace = true }

# Database
sqlx = { workspace = true }
clickhouse = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# UUID
uuid = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Authentication
jsonwebtoken = { workspace = true }
bcrypt = { workspace = true }

# Crypto for HMAC signatures
hmac = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }

# Logging/Tracing
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Time
chrono = { workspace = true }

[dev-dependencies]
# Testing
tokio-test = "0.4"
