[package]
name = "leptos-portal"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
leptos = { version = "0.6", features = ["csr"] }
leptos_router = { version = "0.6", features = ["csr"] }
leptos_meta = { version = "0.6", features = ["csr"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
gloo-net = { version = "0.6", features = ["http"] }
gloo-storage = "0.3"
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["Navigator", "Clipboard", "Window"] }
console_error_panic_hook = "0.1"
wasm-bindgen-futures = "0.4"
console_log = "1.0"
log = "0.4"

[dependencies.ethhook-domain]
path = "../domain"
default-features = false

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
