[package]
name = "ethhook-message-processor"
version = "0.1.0"
edition = "2024"

[dependencies]
# Workspace dependencies
ethhook-common = { path = "../common" }

# Async runtime
tokio = { workspace = true }

# Database
sqlx = { workspace = true }

# Redis
redis = { workspace = true }

# Error handling
anyhow = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Logging
tracing = { workspace = true }

# Metrics
prometheus = "0.13"
lazy_static = "1.4"
axum = { workspace = true }

# Utilities
uuid = { workspace = true }
dotenvy = { workspace = true }
hostname = "0.4"
chrono = { workspace = true }
