[package]
name = "pipeline"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# Core async runtime - STABLE VERSION (not bleeding edge)
# Safety: Pin to 1.40 (Sep 2024), well-tested, avoid 1.47 (too new)
tokio = { version = "1.40", features = [
    "rt-multi-thread",   # Multi-threaded runtime
    "macros",            # #[tokio::main]
    "net",               # TCP/UDP
    "time",              # Timers
    "sync",              # Channels, mutexes
    "signal",            # Ctrl-C handling
] }

# Tokio utilities
tokio-util = "0.7"
tokio-stream = "0.1"

# Web framework (admin endpoints, metrics)
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "timeout"] }

# Database (async SQLite - lightweight, embedded)
sqlx = { version = "0.8.6", features = ["runtime-tokio-native-tls", "sqlite", "chrono", "uuid", "migrate"] }
clickhouse = { workspace = true }

# In-memory caching (hot path: zero DB queries)
dashmap = "6.1"
once_cell = "1.20"

# HTTP client
reqwest = { version = "0.12", features = ["json"] }

# WebSocket client (blockchain connections)
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
futures-util = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Metrics
prometheus = "0.13"
lazy_static = "1.4"

# Crypto (HMAC signatures)
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1.6", features = ["serde", "v4"] }

# Local dependencies
ethhook-common = { path = "../common" }
ethhook-domain = { path = "../domain", features = ["clickhouse"] }
ethhook-config = { path = "../config" }

[dev-dependencies]
mockito = "1.2"
testcontainers = "0.15"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
