[package]
name = "ethhook-load-tester"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
redis = { version = "0.24", features = ["tokio-comp", "streams"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.4", features = ["derive"] }
reqwest = { version = "0.12", features = ["json"] }
colored = "2.0"
indicatif = "0.17"
hdrhistogram = "7.5"
uuid = { version = "1.6", features = ["v4", "serde"] }
hex = "0.4"

[[bin]]
name = "load-tester"
path = "src/main.rs"
